Add Makefile and do_work.c for kernel module example with color output and help menu

--- a/Assignment03/Makefile
+++ b/Assignment03/Makefile
@@ -22,7 +22,7 @@ ITALIC = \033[3m
 #                               VARIABLES                                      #
 ################################################################################
 
-NAME := hello
+NAME := do_work
 
 obj-m += $(NAME).o
 PWD := $(CURDIR)
