--- a/Assignment05/Makefile
+++ b/Assignment05/Makefile
@@ -28,14 +28,16 @@ obj-m += $(NAME).o
 PWD := $(CURDIR)
 SUDO := $(shell [ "$$(id -u)" -ne 0 ] && echo "sudo")
 
-all:
+all: up
+
+compile:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 
 clean:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 
-up:
-	@if lsmod | awk '{print $$1}' | grep -q $(NAME); then \
+up: compile
+	@if lsmod | awk '{print $$1}' | grep -w $(NAME); then \
 		printf "$(BLUE)[INFO]$(END) >> Modulo $(NAME) is already loaded\n"; \
 	else \
 		if [ -f $(NAME).ko ]; then \
@@ -45,7 +47,7 @@ up:
 		fi \
 	fi
 down:
-	@if lsmod | awk '{print $$1}' | grep -q $(NAME); then \
+	@if lsmod | awk '{print $$1}' | grep -w $(NAME); then \
 		rmmod $(NAME) && printf "$(GREEN)[SUCCESS]$(END) >> Unloaded $(NAME).ko\n"; \
 	else \
 		printf "$(RED)[ERROR]$(END) >> Module $(NAME) is not loaded\n"; \
@@ -59,7 +61,7 @@ info:
 		printf "$(RED)[ERROR]$(END) >> Module file $(NAME).ko not found\n"; \
 	fi
 
-re: clean all
+re: down clean all
 	@printf "$(BLUE)[INFO]$(END) >> Rebuilt module $(NAME).ko\n"
 
 fre: down clean all up
